Fixed article spacing

--- a/app/assets/scss/layout/_articles.scss
+++ b/app/assets/scss/layout/_articles.scss
@@ -108,6 +108,10 @@
             font-size: 14px;
             line-height: 1.5;
 
+            .body {
+                padding-bottom: 5em;
+            }
+
 
 
             h3{
